traces/bug_70.txt
examples++-load/Element_Mixte3d.cpp:50: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of Fem2D::TypeOfFE_Edge1_3d::QFe accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/Element_Mixte3d.cpp:50:5: initialization of Fem2D::TypeOfFE_Edge1_3d::QFe
48.       
49.       // Quadrature formula on an edge, exact for degree 3 (ok: int_e (deg2*t *lambda))
50.       const GQuadratureFormular<R1> TypeOfFE_Edge1_3d:: QFe(-1+2*2,2,GaussLegendre(2),true);
          ^
51.       // arguments: exact, num of integration pts, integration pts, clean (~GQuadratureFormular() {if(clean) delete [] p;})
52.       // GaussLegendre defined in QuadratureFormular.cpp

examples++-load/Element_Mixte3d.cpp:50:55: call to Fem2D::GQuadratureFormular<Fem2D::R1>_GQuadratureFormular
48.       
49.       // Quadrature formula on an edge, exact for degree 3 (ok: int_e (deg2*t *lambda))
50.       const GQuadratureFormular<R1> TypeOfFE_Edge1_3d:: QFe(-1+2*2,2,GaussLegendre(2),true);
                                                            ^
51.       // arguments: exact, num of integration pts, integration pts, clean (~GQuadratureFormular() {if(clean) delete [] p;})
52.       // GaussLegendre defined in QuadratureFormular.cpp

src/femlib/QuadratureFormular.hpp:85:51: call to Fem2D::GQuadratureFormular<Fem2D::R1>_Verification
  83.     void Verification(); // for verification 
  84.     GQuadratureFormular (int e,int NbOfNodes,QuadraturePoint *pp,bool c=false)
  85.    :exact(e), n(NbOfNodes),size(n),p(pp),clean(c)  {Verification();}
                                                          ^
  86.     GQuadratureFormular (int e,int NbOfNodes,const QuadraturePoint *pp,bool c=false)
  87.    :exact(e),n(NbOfNodes),p(pp),clean(c)   {Verification();}

src/femlib/QuadratureFormular.cpp:665:4: access to std::cout|
  663.         if (err>tol)
  664.   	{
  665.   	  cerr << " d= " << d << "T Ordre= " << k << " d!k!/(d+k)!= " << se << " " ;
            ^
  666.   	  for(int l=0;l<=d;++l)
  667.   	    cerr << sa[l] << " ";
